# Stack

./: .gitignore  CMakeLists.txt  invalid_symbol.txt  start_build.sh  valid_names.txt  Отчёт_Тилебалиев_1.docx
include/custom_stack/: exception.h  stack.h
include/person/: person.h  person_keeper.h
include/stack/: exception.h  stack.h
src/: main.cpp
src/custom_stack/: main.cpp
src/person/: person.cpp  person_keeper.cpp
